1.4.27.dev
==================================================

- fix issue59: point to new repo site

- allow a new ensuresyspath="append" mode for py.path.local.pyimport()
  so that a neccessary import path is appended instead of prepended to
  sys.path 

- strike undocumented, untested argument to py.path.local.pypkgpath

1.4.26
==================================================

- avoid calling normpath twice in py.path.local

- py.builtin._reraise properly reraises under Python3 now.

- fix issue53 - remove module index, thanks jenisys.

- allow posix path separators when "fnmatch" is called.
  Thanks Christian Long for the complete PR.

1.4.25
==================================================

- fix issue52: vaguely fix py25 compat of py.path.local (it's not
  officially supported), also fix docs

- fix pytest issue 589: when checking if we have a recursion error
  check for the specific "maximum recursion depth" text of the exception.

1.4.24
==================================================

- Fix retrieving source when an else: line has an other statement on
  the same line.

- add localpath read_text/write_text/read_bytes/write_bytes methods
  as shortcuts and clearer bytes/text interfaces for read/write.
  Adapted from a PR from Paul Moore.


1.4.23
==================================================

- use newer apipkg version which makes attribute access on
  alias modules resolve to None rather than an ImportError.
  This helps with code that uses inspect.getframeinfo()
  on py34 which causes a complete walk on sys.modules
  thus triggering the alias module to resolve and blowing
  up with ImportError.  The negative side is that something
  like "py.test.X" will now result in None instead of "importerror: pytest"
  if pytest is not installed.  But you shouldn't import "py.test" 
  anyway anymore.

- adapt one svn test to only check for any exception instead 
  of specific ones because different svn versions cause different
  errors and we don't care.
